Redesign based on brenda project

--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,17 +1,6 @@
-.phony = clean_all clean_stan clean_results clean_pdf clean_data
+.PHONY: clean-results clean-stan clean-all clean-pdf results
 
-QUOTE_LINES = sed "s/^/'/;s/$$/'/"  # pipe this to make sure filenames are quoted
 BIBLIOGRAPHY = bibliography.bib
-CMDSTAN_LOGS = $(shell find results/samples -type f -name "*.txt" | $(QUOTE_LINES))
-STAN_OBJECT_CODE = \
-  $(shell find src/stan -type f \( -not -name "*.stan" -not -name "*.md" \) \
-  | $(QUOTE_LINES))
-SAMPLES = $(shell find results/samples -name "*.csv" | $(QUOTE_LINES))
-FAKE_DATA = $(shell find data/fake -type f -name "*.csv" | $(QUOTE_LINES))
-PREPARED_DATA = $(shell find data/prepared -name "*.csv" | $(QUOTE_LINES))
-INFDS = $(shell find results/infd -type f -not -name "*.md" | $(QUOTE_LINES))
-LOOS = $(shell find results/loo -type f -not -name "*.md" | $(QUOTE_LINES))
-JSONS = $(shell find results/input_data_json -type f -not -name "*.md" | $(QUOTE_LINES))
 MARKDOWN_FILE = report.md
 PDF_FILE = report.pdf
 PANDOCFLAGS =                         \
@@ -20,19 +9,32 @@ PANDOCFLAGS =                         \
   --pdf-engine=xelatex                \
   --bibliography=$(BIBLIOGRAPHY)      
 
+results:
+	python prepare_data.py
+	python sample.py
+
+plots:
+	python analyse.py
+
 $(PDF_FILE): $(MARKDOWN_FILE) $(BIBLIOGRAPHY)
 	pandoc $< -o $@ $(PANDOCFLAGS)
 
-clean_all: clean_stan clean_results clean_pdf clean_data
+clean-stan:
+	$(RM) $(shell find ./src/stan -perm +100 -type f) # remove binary files
+	$(RM) ./src/stan/*.hpp
 
-clean_data:
-	$(RM) $(FAKE_DATA) $(PREPARED_DATA)
+clean-results:
+	$(RM) -r results/runs/*/
 
-clean_stan:
-	$(RM) $(CMDSTAN_LOGS) $(STAN_OBJECT_CODE)
+clean-prepared-data:
+	$(RM) -r data/prepared/*/
 
-clean_results:
-	$(RM) $(SAMPLES) $(INFDS) $(LOOS) $(PLOTS) $(JSONS) $(CMDSTAN_LOGS)
+clean-plots:
+	$(RM) results/plots/*.png
+	$(RM) results/plots/*.svg
 
 clean_pdf:
 	$(RM) $(PDF_FILE)
+
+
+clean-all: clean-prepared-data clean-stan clean-results clean-pdf
