Lots of small changes

--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -9,11 +9,9 @@ PANDOCFLAGS =                         \
   --pdf-engine=xelatex                \
   --bibliography=$(BIBLIOGRAPHY)      
 
-results:
+analysis:
 	python prepare_data.py
 	python sample.py
-
-plots:
 	python analyse.py
 
 report: $(PDF_FILE)
