--- a/{{cookiecutter.repo_name}}/model_configurations/interaction.toml
+++ b/{{cookiecutter.repo_name}}/model_configurations/interaction.toml
@@ -1,7 +1,10 @@
 name = "interaction"
 stan_file = "src/stan/model.stan"
 data_dir = "data/prepared/interaction"
-run_cross_validation = false
+modes = ["prior", "posterior", "cross_validation"]
+
+[stanc_options]
+warn-pedantic = true
 
 [sample_kwargs]
 show_progress = true
@@ -9,5 +12,5 @@ save_warmup = false
 iter_warmup = 2000
 iter_sampling = 2000
 
-[sample_kwargs_cross_validation]
+[sample_kwargs.cross_validation]
 chains = 1
