--- a/.github/workflows/test_end_to_end.yml
+++ b/.github/workflows/test_end_to_end.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name Install cookiecutter
+    - name: Install cookiecutter
       run: pip install cookiecutter
     - name: Use cookiecutter
       run: |
