--- a/.github/workflows/test_end_to_end.yml
+++ b/.github/workflows/test_end_to_end.yml
@@ -7,7 +7,7 @@ on: push
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
