--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,5 +1,5 @@
-.PHONY: clean-results clean-stan clean-all clean-report results report
-
+.PHONY: clean-results clean-stan clean-all results {% if cookiecutter.create_writing_directory == "y" %} report clean-report  {% endif %}
+{% if cookiecutter.create_writing_directory == "y" %}
 BIBLIOGRAPHY = writing/bibliography.bib
 MARKDOWN_FILE = writing/report.md
 PDF_FILE = writing/report.pdf
@@ -9,17 +9,20 @@ PANDOCFLAGS =                         \
   --pdf-engine=xelatex                \
   --citeproc                          \
   --bibliography=$(BIBLIOGRAPHY)      
-
+{% endif %}
 analysis:
 	python prepare_data.py
 	python sample.py
 	python analyse.py
 
 report: $(PDF_FILE)
-
+{% if cookiecutter.create_writing_directory == "y" %}
 $(PDF_FILE): $(MARKDOWN_FILE) $(BIBLIOGRAPHY)
 	pandoc $< -o $@ $(PANDOCFLAGS)
 
+clean-report:
+	$(RM) $(PDF_FILE)
+{% endif %}
 clean-stan:
 	$(RM) $(shell find ./src/stan -perm +100 -type f) # remove binary files
 	$(RM) ./src/stan/*.hpp
@@ -30,8 +33,4 @@ clean-results:
 clean-prepared-data:
 	$(RM) -r data/prepared/*/
 
-clean-report:
-	$(RM) $(PDF_FILE)
-
-
-clean-all: clean-prepared-data clean-stan clean-results clean-report
+clean-all: clean-prepared-data clean-stan clean-results {% if cookiecutter.create_writing_directory == "y" %}clean-report {% endif %}
