Fix yaml test bug

--- a/tests/data/example_config.yml
+++ b/tests/data/example_config.yml
@@ -3,6 +3,6 @@ default_context:
   repo_name: "my_cool_project"
   author_name: "Dr Statistics"
   description: "I used cookiecutter, cmdstanpy and arviz to do an analysis."
-  open_source_license: "MIT",
+  open_source_license: "MIT"
   create_writing_directory: "y"
 
