--- a/tests/data/example_config.yml
+++ b/tests/data/example_config.yml
@@ -2,7 +2,7 @@ default_context:
   project_name: "My Cool Project"
   repo_name: "my_cool_project"
   author_name: "Dr Statistics"
-  coc_contact "dr@statistics.com"
+  coc_contact: "dr@statistics.com"
   description: "I used cookiecutter, cmdstanpy and arviz to do an analysis."
   open_source_license: "MIT"
   create_writing_directory: "y"
