--- a/{{cookiecutter.repo_name}}/requirements.txt
+++ b/{{cookiecutter.repo_name}}/requirements.txt
@@ -2,6 +2,7 @@ arviz>=0.11.4
 cmdstanpy>=1.0.1
 numpy
 pandas
+{% if cookiecutter.create_tests_directory == 'y' %}pytest{% endif %}
 scipy
 sklearn
 toml
