--- a/.github/workflows/test_end_to_end.yml
+++ b/.github/workflows/test_end_to_end.yml
@@ -28,5 +28,7 @@ jobs:
       run: pip install -r my_cool_project/requirements.txt
     - name: Install cmdstan
       run: install_cmdstan -v 2.29.0
+    - name: Run pytest
+      run: pytest
     - name: Run analysis
       run: cd my_cool_project && make analysis
