Try and fix pytest on github actions

--- a/.github/workflows/test_end_to_end.yml
+++ b/.github/workflows/test_end_to_end.yml
@@ -24,11 +24,11 @@ jobs:
     - name: Use cookiecutter
       run: |
         cookiecutter --no-input --config-file tests/data/example_config.yml .
-    - name: install dependencies
+    - name: Install dependencies
       run: pip install -r my_cool_project/requirements.txt
     - name: Install cmdstan
       run: install_cmdstan -v 2.29.0
     - name: Run pytest
-      run: cd my_cool_project && pytest
+      run: cd my_cool_project && python -m pytest
     - name: Run analysis
       run: cd my_cool_project && make analysis
