Change project name in github actions recipe

--- a/.github/workflows/test_end_to_end.yml
+++ b/.github/workflows/test_end_to_end.yml
@@ -1,6 +1,6 @@
 # This workflow tests the cookiecutter.
 
-name: Test cookiecutter-cmdstanpy
+name: Test cookiecutter-cmdstanpy-analysis
 
 on: push
 
