Install dependencies with makefile

--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,6 +1,32 @@
 .PHONY: clean-runs clean-plots clean-stan clean-all analysis
 
-analysis:
+ACTIVATE_VENV_BINARY = .venv/bin/activate
+REQUIREMENTS_FILE = requirements.txt
+
+ifndef CMDSTAN
+	CMDSTAN = ~/.cmdstan
+endif
+
+ifeq ($(OS),Windows_NT)
+	INSTALL_CMDSTAN_CMD += --compiler
+endif
+
+$(ACTIVATE_VENV_BINARY):
+	python -m venv .venv --prompt={{cookiecutter.repo_name}}
+
+$(REQUIREMENTS_FILE): $(ACTIVATE_VENV_BINARY)
+	pip install --upgrade pip
+	pip install -r $(REQUIREMENTS_FILE)
+
+$(CMDSTAN):
+	ifeq ($(OS),Windows_NT)
+		install_cmdstan --compiler
+	else
+		install_cmdstan
+	endif
+
+analysis: $(ACTIVATE_VENV_BINARY) $(REQUIREMENTS_FILE) $(CMDSTAN)
+	. $(ACTIVATE_VENV_BINARY) && pip install --upgrade pip && pip install -r $(REQUIREMENTS_FILE)
 	python prepare_data.py
 	python sample.py
 	jupyter execute investigate.ipynb
