--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -2,8 +2,6 @@
 
 ACTIVATE_VENV_BINARY = .venv/bin/activate
 REQUIREMENTS_FILE = requirements.txt
-PIP=.venv/bin/pip
-
 
 ifeq ($(OS),Windows_NT)
 	INSTALL_CMDSTAN_FLAGS = --compiler
@@ -19,8 +17,9 @@ $(REQUIREMENTS_FILE): $(ACTIVATE_VENV_BINARY)
 	pip install -r $(REQUIREMENTS_FILE)
 
 analysis: $(ACTIVATE_VENV_BINARY) $(REQUIREMENTS_FILE) $(CMDSTAN)
-	. $(ACTIVATE_VENV_BINARY) && $(PIP) install -r $(REQUIREMENTS_FILE)
+	. $(ACTIVATE_VENV_BINARY) && python -m pip install --upgrade pip && python -m pip install -r $(REQUIREMENTS_FILE)
 	install_cmdstan $(INSTALL_CMDSTAN_FLAGS)
+	python -m pytest
 	python prepare_data.py
 	python sample.py
 	jupyter execute investigate.ipynb
