--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,6 +1,6 @@
 .PHONY: clean-runs clean-plots clean-stan clean-all analysis
 
-ACTIVATE_VENV_BINARY = .venv/bin/activate
+ACTIVATE_VENV = .venv/bin/activate
 REQUIREMENTS_FILE = requirements.txt
 
 ifeq ($(OS),Windows_NT)
@@ -9,16 +9,23 @@ else
 	INSTALL_CMDSTAN_FLAGS =
 endif
 
-$(ACTIVATE_VENV_BINARY):
+$(ACTIVATE_VENV):
 	python -m venv .venv --prompt={{cookiecutter.repo_name}}
 
-analysis: $(ACTIVATE_VENV_BINARY) $(REQUIREMENTS_FILE) $(CMDSTAN)
-	. $(ACTIVATE_VENV_BINARY) && python -m pip install --upgrade pip && python -m pip install -r $(REQUIREMENTS_FILE)
-	install_cmdstan $(INSTALL_CMDSTAN_FLAGS)
-	python -m pytest
-	python prepare_data.py
-	python sample.py
-	jupyter execute investigate.ipynb
+env: $(ACTIVATE_VENV) $(REQUIREMENTS_FILE) $(CMDSTAN)
+	. $(ACTIVATE_VENV) && (\
+	  python -m pip install --upgrade pip; \
+	  python -m pip install -r $(REQUIREMENTS_FILE); \
+	  install_cmdstan $(INSTALL_CMDSTAN_FLAGS); \
+	)
+
+analysis: env
+	. $(ACTIVATE_VENV) && (\
+	  python -m pytest; \
+	  python prepare_data.py; \
+	  python sample.py; \
+	  jupyter execute investigate.ipynb; \
+	)
 
 clean-stan:
 	$(RM) $(shell find ./src/stan -perm +100 -type f) # remove binary files
