Update github action

--- a/{{cookiecutter.repo_name}}/.github/workflows/run_pytest.yml
+++ b/{{cookiecutter.repo_name}}/.github/workflows/run_pytest.yml
@@ -26,9 +26,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-    - name: Install cmdstan
-      run: install_cmdstan -v 2.29.0
+    - name: Set up environment
+      run: make env
     - name: Run pytest
-      run: python -m pytest
+      run: ./venv/bin/activate && python -m pytest
