--- a/.github/workflows/test_pandoc.yml
+++ b/.github/workflows/test_pandoc.yml
@@ -10,11 +10,7 @@ jobs:
     container:
       image: pandoc/latex:2.9
 
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-        matrix:
-            os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
