Another approach to testing sphinx

--- a/.github/workflows/test_sphinx.yml
+++ b/.github/workflows/test_sphinx.yml
@@ -7,14 +7,16 @@ on: push
 jobs:
   docs:
     
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-        matrix:
-            os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - uses: ammaraskar/sphinx-action@master
+
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
       with:
-        docs-folder: "{{cookiecutter.repo_name}}/docs/"
+        python-version: 3.8
+    - name: directly build sphinx
+      run: |
+        pip install sphinx
+        sphinx-build -D {{cookiecutter.repo_name}}/docs ./{{cookiecutter.repo_name}}/docs/_build/html/
