--- a/.github/workflows/test_sphinx.yml
+++ b/.github/workflows/test_sphinx.yml
@@ -19,4 +19,5 @@ jobs:
     - name: build docs with sphinx
       run: |
         pip install sphinx
-        sphinx-build -D ./{{cookiecutter.repo_name}}/docs ./{{cookiecutter.repo_name}}/docs/_build/html/
+        cd \{\{cookiecutter.repo_name\}\}
+        sphinx-build -D docs ./docs/_build/html/
