--- a/.github/workflows/test_sphinx.yml
+++ b/.github/workflows/test_sphinx.yml
@@ -20,4 +20,4 @@ jobs:
       run: |
         pip install sphinx
         cd \{\{cookiecutter.repo_name\}\}
-        sphinx-build -D docs ./docs/_build/html/
+        sphinx-build docs ./docs/_build/html/
