--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = mbag
+name = bibat
 url = https://github.com/teddygroves/mbag
 download_url = https://pypi.org/project/mbag
 author = Teddy Groves
 author_email = tedgro@dtu.dk
-version = 0.0.1
+version = file: VERSION.txt
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Science/Research
@@ -29,11 +29,11 @@ install_requires =
     pip >= 20
     cookiecutter
 python_requires = >=3.7
-packages = mbag
+packages = bibat
 
 [options.entry_points]
 console_scripts =
-    mbag = cli:main
+    bibat = bibat.cli:main
 
 [options.extras_require]
 development =
@@ -43,6 +43,7 @@ development =
     tox
     sphinx
     sphinx-click
+    pydata_sphinx_theme
 
 [bdist_wheel]
 universal = 1
