--- a/.github/workflows/test_end_to_end.yml
+++ b/.github/workflows/test_end_to_end.yml
@@ -1,4 +1,4 @@
-# This workflow tests the cookiecutter.
+# This workflow tests bibat.
 
 name: Test cookiecutter-cmdstanpy-analysis
 
@@ -19,10 +19,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install cookiecutter
-      run: pip install cookiecutter
-    - name: Use cookiecutter
-      run: |
-        cookiecutter --no-input --config-file tests/data/example_config.yml .
+    - name: Install bibat
+      run: pip install -e .
+    - name: Use bibat
+      run: bibat --config-file=tests/data/example_config.yml
     - name: Run analysis
       run: cd my_cool_project && make analysis
