--- a/.github/workflows/test_sphinx.yml
+++ b/.github/workflows/test_sphinx.yml
@@ -16,8 +16,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: install bibat with development packages
+      run: pip install -e .\[development\]
     - name: build docs with sphinx
       run: |
-        pip install sphinx
         cd \{\{cookiecutter.repo_name\}\}
         sphinx-build docs ./docs/_build/html/
