--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,4 +4,5 @@ types-toml >= 0.10.8
 mypy >= 0.981
 python-lsp-server[all] >= 1.5.0
 python-lsp-black >= 1.2.1 
-pylsp-mypy >= 0.6.3 
+pylsp-mypy >= 0.6.3
+pyls-isort
