Correct topic in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3 :: Only
-    Topic :: Scientific/Engineering :: Statistics
+    Topic :: Scientific/Engineering :: Information Analysis
 license = GNU General Public License version 3
 description = Medium-sized Bayesian Analysis Generator
 long_description = file: README.rst
