--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ keywords =
 
 [options]
 zip_safe = True
-include_package_data=True
+include_package_data = True
 install_requires =
     pip >= 20
     cookiecutter
