Use click prompts in cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ include_package_data = True
 install_requires =
     pip >= 20
     cookiecutter
+    click
 python_requires = >=3.7
 packages = bibat
 
