--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,13 @@ description = Medium-sized Bayesian Analysis Generator
 long_description = file: README.rst
 keywords =
 
+# [mypy]
+# plugins = pydantic.mypy
+# ignore_missing_imports = true
+# follow_imports = skip
+# strict_optional = true
+
+
 [options]
 zip_safe = True
 include_package_data = True
