--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ exclude = '''
     | buck-out
     | build
     | dist
+    | bibat/{{cookiecutter.repo_name}}
   )/
   | foo.py           # also separately exclude a file named foo.py in
                      # the root of the project
