--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ env_list =
 minversion = 4.2.8
 
 [flake8]
-exclude = *.venv*, *.tox*, build/*
+exclude = *.venv*, *.tox*, build/*, *cookiecutter.repo_name*
 max_line_length = 80
 
 [testenv]
