--- a/bibat/examples/baseball/pyproject.toml
+++ b/bibat/examples/baseball/pyproject.toml
@@ -1,3 +1,34 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "baseball"
+authors = [
+    {name = "Teddy Groves", email = "author@email.com"},
+]
+version = "0.0.1"
+description = "Comparison of distributions for modelling baseball hitting"
+readme = "README.md"
+requires-python = ">=3.9"
+dependencies = [
+    "arviz",
+    "cmdstanpy",
+    "jupyter",
+    "numpy",
+    "pandas",
+    "pandera",
+    "pydantic",
+    "scipy",
+    "scikit-learn",
+    "toml",
+    
+    
+]
+
+[tool.setuptools]
+packages = ["baseball"]
+
 [tool.black]
 line-length = 80
 target-version = ['py38']
